Animation added to recyclerview

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorSurface"
+        android:layoutAnimation="@anim/recycler"
         tools:listitem="@layout/item_food" />
 
 </LinearLayout>
