--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,15 @@
                 app:srcCompat="@drawable/ic_add"
                 app:tint="@color/white" />
 
+            <ImageView
+                android:id="@+id/btn_remove_all_foods"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="36dp"
+                app:srcCompat="@drawable/ic_clear_all"
+                app:tint="@color/white" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
